tests/NormalTests/paczka1/fuzzy1/99240448.err
Error in line 6: 2hcWCcH S245 42,1
Error in line 12: qsO3SeWD A672 86,4
Error in line 17: qsO3SeWD A677 397,3
Error in line 21: qsO3SeWD S469 50,6
Error in line 22: qsO3SeWD S245 64,9
Error in line 19: 8xwTDoao1 S321 588,5
Error in line 32: lZf S321 375,8
